Try to streamline code