@@ -7,7 +7,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import javafx.beans.binding.Bindings;
 import javafx.beans.binding.BooleanBinding;
@@ -35,7 +34,10 @@ public class ContentSelectorViewModel implements PropertiesTabViewModel {
     private static final List<Field> DEFAULT_FIELD_NAMES = List.of(StandardField.AUTHOR, StandardField.JOURNAL, StandardField.KEYWORDS, StandardField.PUBLISHER);
 
     private final MetaData metaData;
+
     private final DialogService dialogService;
+
+    // The map from each field to its predefined strings ("keywords") that can be selected
     private final Map<Field, List<String>> fieldKeywordsMap = new HashMap<>();
 
     private final ListProperty<Field> fields = new SimpleListProperty<>(FXCollections.observableArrayList());
@@ -67,21 +69,22 @@ public class ContentSelectorViewModel implements PropertiesTabViewModel {
     @Override
     public void storeSettings() {
         List<Field> metaDataFields = metaData.getContentSelectors().getFieldsWithSelectors();
-        List<Field> fieldNamesToRemove = new ArrayList<>(filterFieldsToRemove());
+        List<Field> fieldNamesToRemove;
 
         if (isDefaultMap(fieldKeywordsMap)) {
-            fieldNamesToRemove.addAll(metaData.getContentSelectorList().stream().map(ContentSelector::getField).toList());
-            fieldKeywordsMap.forEach((field, keywords) -> updateMetaDataContentSelector(metaDataFields, field, keywords));
-            fieldNamesToRemove.forEach(metaData::clearContentSelectors);
+            // Remove all fields of the content selector
+            fieldNamesToRemove = metaData.getContentSelectorList().stream().map(ContentSelector::getField).toList();
         } else {
-            List<Field> toRemove = fieldKeywordsMap.entrySet().stream().filter(entry -> DEFAULT_FIELD_NAMES.contains(entry
-                    .getKey()) && entry.getValue().isEmpty()).map(Map.Entry::getKey).toList();
-            fieldNamesToRemove.addAll(toRemove);
-            fieldKeywordsMap.forEach((field, keywords) -> updateMetaDataContentSelector(metaDataFields, field, keywords));
-            fieldNamesToRemove.forEach(metaData::clearContentSelectors);
+            fieldNamesToRemove = determineFieldsToRemove();
         }
+
+        fieldKeywordsMap.forEach((field, keywords) -> updateMetaDataContentSelector(metaDataFields, field, keywords));
+        fieldNamesToRemove.forEach(metaData::clearContentSelectors);
     }
 
+    /**
+     * Checks whether the given map is the default map, i.e. contains only the default field names and no associated keywords.
+     */
     private boolean isDefaultMap(Map<Field, List<String>> fieldKeywordsMap) {
         if (fieldKeywordsMap.size() != DEFAULT_FIELD_NAMES.size()) {
             return false;
@@ -204,11 +207,28 @@ public class ContentSelectorViewModel implements PropertiesTabViewModel {
         keywords.remove(keywordToRemove);
     }
 
-    private List<Field> filterFieldsToRemove() {
+    /**
+     * Determines the list of fields to remove in case a non-default map:
+     *
+     * <ul>
+     *     <li>Fields that are not in the new list of fields and</li>
+     *     <li>>all default fields that have no associated keywords</li>
+     * </ul>
+     */
+    private List<Field> determineFieldsToRemove() {
         Set<Field> newlyAddedKeywords = fieldKeywordsMap.keySet();
-        return metaData.getContentSelectors().getFieldsWithSelectors().stream()
-                       .filter(field -> !newlyAddedKeywords.contains(field))
-                       .collect(Collectors.toList());
+
+        // Remove all content selectors that are not in the new list
+        List<Field> result = new ArrayList(metaData.getContentSelectors().getFieldsWithSelectors().stream()
+                                                   .filter(field -> !newlyAddedKeywords.contains(field))
+                                                   .toList());
+        // Remove all unset default fields
+        result.addAll(fieldKeywordsMap.entrySet()
+                                      .stream()
+                                      .filter(entry -> DEFAULT_FIELD_NAMES.contains(entry.getKey()) && entry.getValue().isEmpty()).map(Map.Entry::getKey)
+                                      .toList());
+
+        return result;
     }
 
     private void updateMetaDataContentSelector(List<Field> existingFields, Field field, List<String> keywords) {
